@@ -248,6 +248,7 @@ $GLOBALS['ISO_LANG']['MSC']['useDefault']			= 'Use default value';
 $GLOBALS['ISO_LANG']['MSC']['activeStep']			= 'active step: ';
 $GLOBALS['ISO_LANG']['MSC']['productcacheLoading']	= 'Loading products...';
 $GLOBALS['ISO_LANG']['MSC']['productcacheNoscript']	= 'Your browser does not support javascript. Please <a href="%s">click here</a> to load the product list.';
+$GLOBALS['ISO_LANG']['MSC']['noFilesInFolder']		= 'No files in this folder';
 
 
 /**
